Chrome client - Register and unregister using GCM
Bug: https://b.corp.google.com/issues/23351505
Change-Id: Id55f941ece4b15a843d9e8609ab0960bd9082110

--- a/chrome/index.html
+++ b/chrome/index.html
@@ -46,8 +46,8 @@
   </div>
 
   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    <input class="mdl-textfield__input" type="url" id="appServerHost" value="http://localhost:4260/" />
-    <label class="mdl-textfield__label" for="senderId">App server host</label>
+    <input class="mdl-textfield__input" type="text" id="stringIdentifier" />
+    <label class="mdl-textfield__label" for="stringIdentifier">String Identifier (Optional)</label>
   </div>
 
   <div class="mdl-grid">
