--- a/web/app/elements/elements.html
+++ b/web/app/elements/elements.html
@@ -30,6 +30,7 @@
 <link rel="import" href="../styles/app-theme.html">
 
 <link rel="import" href="downstream-page/downstream-page.html">
+<link rel="import" href="upstream-message/upstream-message.html">
 
 
 <!-- Configure your routes here -->
