--- a/web/app/elements/recipients-chooser/recipients-chooser.html
+++ b/web/app/elements/recipients-chooser/recipients-chooser.html
@@ -41,6 +41,7 @@
     #regIdsList paper-item-body [secondary] {
       color: #757575;
       margin-left: 30px;
+      font-size: 12px;
     }
 
   </style>
@@ -55,20 +56,23 @@
     <iron-collapse id="regIdsList">
       <template is="dom-repeat" items="{{recipients.clients}}">
         <paper-item>
-          <paper-item-body two-line>
+          <paper-item-body>
             <div>
-              <paper-checkbox on-change="registrationIdChangeHandler"><span>{{item.registration_token}}</span></paper-checkbox>
+              <template is="dom-if" if="{{item.string_identifier}}">
+                <paper-checkbox on-change="registrationIdChangeHandler" token="{{item.registration_token}}"><span>{{item.string_identifier}}</span></paper-checkbox>
+                <div secondary><span>{{item.registration_token}}</span></div>
+              </template>
+              <template is="dom-if" if="{{!item.string_identifier}}">
+                <paper-checkbox on-change="registrationIdChangeHandler" token="{{item.registration_token}}"><span>{{item.registration_token}}</span></paper-checkbox>
+                <div secondary><span>{{item.string_identifier}}</span></div>
+              </template>
             </div>
-            <div secondary><span>{{item.string_identifier}}</span></div>
           </paper-item-body>
         </paper-item>
       </template>
     </iron-collapse>
 
     <paper-textarea id="customList" label="Or, paste one registration ID" on-value-changed="customListHandler"></paper-textarea>
-    <!-- The page autofocuses (and hence scrolls) to the textarea above. This
-         field is added to prevent that. -->
-    <input type="hidden" autofocus="true" />
   </template>
 
   <script>
@@ -105,7 +109,7 @@
          */
         registrationIdChangeHandler: function(e) {
           var el = e.target;
-          var selected_id = el.textContent.trim();
+          var selected_id = el.token.trim();
 
           if (!el.checked) {
             // Deselecting, remove from the array
@@ -173,7 +177,7 @@
           Polymer.dom(this.$.regIdsList)
                  .querySelectorAll('paper-checkbox[checked]')
                  .map(function(checkbox) {
-                   selectedIds_.push(checkbox.innerText.trim());
+                   selectedIds_.push(checkbox.token.trim());
                  });
           return selectedIds_;
         },
