--- a/web/app/index.html
+++ b/web/app/index.html
@@ -34,6 +34,18 @@
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oxygen:700|Source+Sans+Pro">
 
+  <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+
+  <style type="text/css">
+    paper-material {
+      @apply(--layout-vertical);
+      border-radius: 2px;
+      height: 100%;
+      padding: 30px;
+      margin: 16px auto;
+      background: white;
+    }
+  </style>
 </head>
 
 <body unresolved class="fullbleed layout vertical">
@@ -72,18 +84,18 @@
         <downstream-page></downstream-page>
       </section>
 
-      <section main data-route="upstream">
-        <h2>Upstream messages</h2>
-
-        <paper-material elevation="2">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </paper-material>
+      <section main data-route="upstream" id="upstream">
       </section>
+
+      <script type="text/javascript">
+        var socket = io('http://localhost:4260/');
+        socket.on('upstream message', function(msg){
+          messages = document.getElementById("upstream");
+          var messageEl = document.createElement("upstream-message");
+          messageEl.setAttribute('body', JSON.stringify(msg, null, 4))
+          messages.insertBefore(messageEl, messages.firstChild);
+        });
+      </script>
 
     </iron-pages>
 
