--- a/web/app/elements/upstream-page/upstream-message/upstream-message.html
+++ b/web/app/elements/upstream-page/upstream-message/upstream-message.html
@@ -14,8 +14,8 @@
 // limitations under the License.
 -->
 
-<link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
-<link rel="import" href="../../bower_components/paper-input/paper-textarea.html">
+<link rel="import" href="../../../bower_components/iron-collapse/iron-collapse.html">
+<link rel="import" href="../../../bower_components/paper-input/paper-textarea.html">
 
 <dom-module id="upstream-message">
 
