--- a/web/app/elements/routing.html
+++ b/web/app/elements/routing.html
@@ -19,7 +19,7 @@
   window.addEventListener('WebComponentsReady', function() {
 
     page('/', function () {
-      app.route = 'home';
+      app.route = 'downstream';
     });
 
     page('/downstream', function () {
